recursion.logo.square.FourSquare.scala.code
def square {
  forward(100)
  left()
  forward(100)
  left()
  forward(100)
  left()
  forward(100)
  }
}
override def run() {
  
}
